sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/README.md
# @azure/arm-oracledatabase client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-oracledatabase in some common scenarios.

| **File Name**                                                                                                                   | **Description**                                                                                                                                                                                         |
| ------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [autonomousDatabaseBackupsCreateOrUpdateSample.js][autonomousdatabasebackupscreateorupdatesample]                               | create a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_CreateOrUpdate_MaximumSet_Gen.json                                                                   |
| [autonomousDatabaseBackupsDeleteSample.js][autonomousdatabasebackupsdeletesample]                                               | delete a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_Delete_MaximumSet_Gen.json                                                                           |
| [autonomousDatabaseBackupsGetSample.js][autonomousdatabasebackupsgetsample]                                                     | get a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_Get_MaximumSet_Gen.json                                                                                 |
| [autonomousDatabaseBackupsListByParentSample.js][autonomousdatabasebackupslistbyparentsample]                                   | list AutonomousDatabaseBackup resources by AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_ListByParent_MaximumSet_Gen.json                                         |
| [autonomousDatabaseBackupsUpdateSample.js][autonomousdatabasebackupsupdatesample]                                               | update a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_Update_MaximumSet_Gen.json                                                                           |
| [autonomousDatabaseCharacterSetsGetSample.js][autonomousdatabasecharactersetsgetsample]                                         | get a AutonomousDatabaseCharacterSet x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseCharacterSets_Get_MaximumSet_Gen.json                                                                     |
| [autonomousDatabaseCharacterSetsListByLocationSample.js][autonomousdatabasecharactersetslistbylocationsample]                   | list AutonomousDatabaseCharacterSet resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseCharacterSets_ListByLocation_MaximumSet_Gen.json                 |
| [autonomousDatabaseNationalCharacterSetsGetSample.js][autonomousdatabasenationalcharactersetsgetsample]                         | get a AutonomousDatabaseNationalCharacterSet x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseNationalCharacterSets_Get_MaximumSet_Gen.json                                                     |
| [autonomousDatabaseNationalCharacterSetsListByLocationSample.js][autonomousdatabasenationalcharactersetslistbylocationsample]   | list AutonomousDatabaseNationalCharacterSet resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseNationalCharacterSets_ListByLocation_MaximumSet_Gen.json |
| [autonomousDatabaseVersionsGetSample.js][autonomousdatabaseversionsgetsample]                                                   | get a AutonomousDbVersion x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseVersions_Get_MaximumSet_Gen.json                                                                                     |
| [autonomousDatabaseVersionsListByLocationSample.js][autonomousdatabaseversionslistbylocationsample]                             | list AutonomousDbVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseVersions_ListByLocation_MaximumSet_Gen.json                                 |
| [autonomousDatabasesActionSample.js][autonomousdatabasesactionsample]                                                           | perform Lifecycle Management Action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Action_MaximumSet_Gen.json                                                        |
| [autonomousDatabasesChangeDisasterRecoveryConfigurationSample.js][autonomousdatabaseschangedisasterrecoveryconfigurationsample] | perform ChangeDisasterRecoveryConfiguration action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_ChangeDisasterRecoveryConfiguration_MaximumSet_Gen.json            |
| [autonomousDatabasesCreateOrUpdateSample.js][autonomousdatabasescreateorupdatesample]                                           | create a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_CreateOrUpdate_MaximumSet_Gen.json                                                                               |
| [autonomousDatabasesDeleteSample.js][autonomousdatabasesdeletesample]                                                           | delete a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Delete_MaximumSet_Gen.json                                                                                       |
| [autonomousDatabasesFailoverSample.js][autonomousdatabasesfailoversample]                                                       | perform failover action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Failover_MaximumSet_Gen.json                                                                  |
| [autonomousDatabasesGenerateWalletSample.js][autonomousdatabasesgeneratewalletsample]                                           | generate wallet action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_GenerateWallet_MaximumSet_Gen.json                                                             |
| [autonomousDatabasesGetSample.js][autonomousdatabasesgetsample]                                                                 | get a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Get_MaximumSet_Gen.json                                                                                             |
| [autonomousDatabasesListByResourceGroupSample.js][autonomousdatabaseslistbyresourcegroupsample]                                 | list AutonomousDatabase resources by resource group x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_ListByResourceGroup_MaximumSet_Gen.json                                                  |
| [autonomousDatabasesListBySubscriptionSample.js][autonomousdatabaseslistbysubscriptionsample]                                   | list AutonomousDatabase resources by subscription ID x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_ListBySubscription_MaximumSet_Gen.json                                                  |
| [autonomousDatabasesRestoreSample.js][autonomousdatabasesrestoresample]                                                         | restores an Autonomous Database based on the provided request parameters. x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Restore_MaximumSet_Gen.json                                        |
| [autonomousDatabasesShrinkSample.js][autonomousdatabasesshrinksample]                                                           | this operation shrinks the current allocated storage down to the current actual used data storage. x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Shrink_MaximumSet_Gen.json                |
| [autonomousDatabasesSwitchoverSample.js][autonomousdatabasesswitchoversample]                                                   | perform switchover action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Switchover_MaximumSet_Gen.json                                                              |
| [autonomousDatabasesUpdateSample.js][autonomousdatabasesupdatesample]                                                           | update a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Update_MaximumSet_Gen.json                                                                                       |
| [cloudExadataInfrastructuresAddStorageCapacitySample.js][cloudexadatainfrastructuresaddstoragecapacitysample]                   | perform add storage capacity on exadata infra x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_AddStorageCapacity_MaximumSet_Gen.json                                                 |
| [cloudExadataInfrastructuresConfigureExascaleSample.js][cloudexadatainfrastructuresconfigureexascalesample]                     | configures Exascale on Cloud exadata infrastructure resource x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_ConfigureExascale_MaximumSet_Gen.json                                   |
| [cloudExadataInfrastructuresCreateOrUpdateSample.js][cloudexadatainfrastructurescreateorupdatesample]                           | create a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_CreateOrUpdate_MaximumSet_Gen.json                                                               |
| [cloudExadataInfrastructuresDeleteSample.js][cloudexadatainfrastructuresdeletesample]                                           | delete a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_Delete_MaximumSet_Gen.json                                                                       |
| [cloudExadataInfrastructuresGetSample.js][cloudexadatainfrastructuresgetsample]                                                 | get a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_Get_MaximumSet_Gen.json                                                                             |
| [cloudExadataInfrastructuresListByResourceGroupSample.js][cloudexadatainfrastructureslistbyresourcegroupsample]                 | list CloudExadataInfrastructure resources by resource group x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_ListByResourceGroup_MaximumSet_Gen.json                                  |
| [cloudExadataInfrastructuresListBySubscriptionSample.js][cloudexadatainfrastructureslistbysubscriptionsample]                   | list CloudExadataInfrastructure resources by subscription ID x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_ListBySubscription_MaximumSet_Gen.json                                  |
| [cloudExadataInfrastructuresUpdateSample.js][cloudexadatainfrastructuresupdatesample]                                           | update a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_Update_MaximumSet_Gen.json                                                                       |
| [cloudVmClustersAddVmsSample.js][cloudvmclustersaddvmssample]                                                                   | add VMs to the VM Cluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_AddVms_MaximumSet_Gen.json                                                                                             |
| [cloudVmClustersCreateOrUpdateSample.js][cloudvmclusterscreateorupdatesample]                                                   | create a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_CreateOrUpdate_MaximumSet_Gen.json                                                                                       |
| [cloudVmClustersDeleteSample.js][cloudvmclustersdeletesample]                                                                   | delete a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_Delete_MaximumSet_Gen.json                                                                                               |
| [cloudVmClustersGetSample.js][cloudvmclustersgetsample]                                                                         | get a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_Get_MaximumSet_Gen.json                                                                                                     |
| [cloudVmClustersListByResourceGroupSample.js][cloudvmclusterslistbyresourcegroupsample]                                         | list CloudVmCluster resources by resource group x-ms-original-file: 2025-11-01-preview/CloudVmClusters_ListByResourceGroup_MaximumSet_Gen.json                                                          |
| [cloudVmClustersListBySubscriptionSample.js][cloudvmclusterslistbysubscriptionsample]                                           | list CloudVmCluster resources by subscription ID x-ms-original-file: 2025-11-01-preview/CloudVmClusters_ListBySubscription_MaximumSet_Gen.json                                                          |
| [cloudVmClustersListPrivateIpAddressesSample.js][cloudvmclusterslistprivateipaddressessample]                                   | list Private IP Addresses by the provided filter x-ms-original-file: 2025-11-01-preview/CloudVmClusters_ListPrivateIpAddresses_MaximumSet_Gen.json                                                      |
| [cloudVmClustersRemoveVmsSample.js][cloudvmclustersremovevmssample]                                                             | remove VMs from the VM Cluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_RemoveVms_MaximumSet_Gen.json                                                                                     |
| [cloudVmClustersUpdateSample.js][cloudvmclustersupdatesample]                                                                   | update a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_Update_MaximumSet_Gen.json                                                                                               |
| [dbNodesActionSample.js][dbnodesactionsample]                                                                                   | vM actions on DbNode of VM Cluster by the provided filter x-ms-original-file: 2025-11-01-preview/DbNodes_Action_MaximumSet_Gen.json                                                                     |
| [dbNodesGetSample.js][dbnodesgetsample]                                                                                         | get a DbNode x-ms-original-file: 2025-11-01-preview/DbNodes_Get_MaximumSet_Gen.json                                                                                                                     |
| [dbNodesListByParentSample.js][dbnodeslistbyparentsample]                                                                       | list DbNode resources by CloudVmCluster x-ms-original-file: 2025-11-01-preview/DbNodes_ListByParent_MaximumSet_Gen.json                                                                                 |
| [dbServersGetSample.js][dbserversgetsample]                                                                                     | get a DbServer x-ms-original-file: 2025-11-01-preview/DbServers_Get_MaximumSet_Gen.json                                                                                                                 |
| [dbServersListByParentSample.js][dbserverslistbyparentsample]                                                                   | list DbServer resources by CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/DbServers_ListByParent_MaximumSet_Gen.json                                                                 |
| [dbSystemShapesGetSample.js][dbsystemshapesgetsample]                                                                           | get a DbSystemShape x-ms-original-file: 2025-11-01-preview/DbSystemShapes_Get_MaximumSet_Gen.json                                                                                                       |
| [dbSystemShapesListByLocationSample.js][dbsystemshapeslistbylocationsample]                                                     | list DbSystemShape resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DbSystemShapes_ListByLocation_MaximumSet_Gen.json                                                   |
| [dbSystemsCreateOrUpdateSample.js][dbsystemscreateorupdatesample]                                                               | create a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_CreateOrUpdate_MaximumSet_Gen.json                                                                                                   |
| [dbSystemsDeleteSample.js][dbsystemsdeletesample]                                                                               | delete a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_Delete_MaximumSet_Gen.json                                                                                                           |
| [dbSystemsGetSample.js][dbsystemsgetsample]                                                                                     | get a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_Get_MaximumSet_Gen.json                                                                                                                 |
| [dbSystemsListByResourceGroupSample.js][dbsystemslistbyresourcegroupsample]                                                     | list DbSystem resources by resource group x-ms-original-file: 2025-11-01-preview/DbSystems_ListByResourceGroup_MaximumSet_Gen.json                                                                      |
| [dbSystemsListBySubscriptionSample.js][dbsystemslistbysubscriptionsample]                                                       | list DbSystem resources by subscription ID x-ms-original-file: 2025-11-01-preview/DbSystems_ListBySubscription_MaximumSet_Gen.json                                                                      |
| [dbSystemsUpdateSample.js][dbsystemsupdatesample]                                                                               | update a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_Update_MaximumSet_Gen.json                                                                                                           |
| [dbVersionsGetSample.js][dbversionsgetsample]                                                                                   | get a DbVersion x-ms-original-file: 2025-11-01-preview/DbVersions_Get_MaximumSet_Gen.json                                                                                                               |
| [dbVersionsListByLocationSample.js][dbversionslistbylocationsample]                                                             | list DbVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DbVersions_ListByLocation_MaximumSet_Gen.json                                                           |
| [dnsPrivateViewsGetSample.js][dnsprivateviewsgetsample]                                                                         | get a DnsPrivateView x-ms-original-file: 2025-11-01-preview/DnsPrivateViews_Get_MaximumSet_Gen.json                                                                                                     |
| [dnsPrivateViewsListByLocationSample.js][dnsprivateviewslistbylocationsample]                                                   | list DnsPrivateView resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DnsPrivateViews_ListByLocation_MaximumSet_Gen.json                                                 |
| [dnsPrivateZonesGetSample.js][dnsprivatezonesgetsample]                                                                         | get a DnsPrivateZone x-ms-original-file: 2025-11-01-preview/DnsPrivateZones_Get_MaximumSet_Gen.json                                                                                                     |
| [dnsPrivateZonesListByLocationSample.js][dnsprivatezoneslistbylocationsample]                                                   | list DnsPrivateZone resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DnsPrivateZones_ListByLocation_MaximumSet_Gen.json                                                 |
| [exadbVmClustersCreateOrUpdateSample.js][exadbvmclusterscreateorupdatesample]                                                   | create a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_CreateOrUpdate_MaximumSet_Gen.json                                                                                       |
| [exadbVmClustersDeleteSample.js][exadbvmclustersdeletesample]                                                                   | delete a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_Delete_MaximumSet_Gen.json                                                                                               |
| [exadbVmClustersGetSample.js][exadbvmclustersgetsample]                                                                         | get a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_Get_MaximumSet_Gen.json                                                                                                     |
| [exadbVmClustersListByResourceGroupSample.js][exadbvmclusterslistbyresourcegroupsample]                                         | list ExadbVmCluster resources by resource group x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_ListByResourceGroup_MaximumSet_Gen.json                                                          |
| [exadbVmClustersListBySubscriptionSample.js][exadbvmclusterslistbysubscriptionsample]                                           | list ExadbVmCluster resources by subscription ID x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_ListBySubscription_MaximumSet_Gen.json                                                          |
| [exadbVmClustersRemoveVmsSample.js][exadbvmclustersremovevmssample]                                                             | remove VMs from the VM Cluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_RemoveVms_MaximumSet_Gen.json                                                                                     |
| [exadbVmClustersUpdateSample.js][exadbvmclustersupdatesample]                                                                   | update a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_Update_MaximumSet_Gen.json                                                                                               |
| [exascaleDbNodesActionSample.js][exascaledbnodesactionsample]                                                                   | vM actions on DbNode of ExadbVmCluster by the provided filter x-ms-original-file: 2025-11-01-preview/ExascaleDbNodes_Action_MaximumSet_Gen.json                                                         |
| [exascaleDbNodesGetSample.js][exascaledbnodesgetsample]                                                                         | get a ExascaleDbNode x-ms-original-file: 2025-11-01-preview/ExascaleDbNodes_Get_MaximumSet_Gen.json                                                                                                     |
| [exascaleDbNodesListByParentSample.js][exascaledbnodeslistbyparentsample]                                                       | list ExascaleDbNode resources by ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExascaleDbNodes_ListByParent_MaximumSet_Gen.json                                                                 |
| [exascaleDbStorageVaultsCreateSample.js][exascaledbstoragevaultscreatesample]                                                   | create a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Create_MaximumSet_Gen.json                                                                               |
| [exascaleDbStorageVaultsDeleteSample.js][exascaledbstoragevaultsdeletesample]                                                   | delete a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Delete_MaximumSet_Gen.json                                                                               |
| [exascaleDbStorageVaultsGetSample.js][exascaledbstoragevaultsgetsample]                                                         | get a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Get_MaximumSet_Gen.json                                                                                     |
| [exascaleDbStorageVaultsListByResourceGroupSample.js][exascaledbstoragevaultslistbyresourcegroupsample]                         | list ExascaleDbStorageVault resources by resource group x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_ListByResourceGroup_MaximumSet_Gen.json                                          |
| [exascaleDbStorageVaultsListBySubscriptionSample.js][exascaledbstoragevaultslistbysubscriptionsample]                           | list ExascaleDbStorageVault resources by subscription ID x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_ListBySubscription_MaximumSet_Gen.json                                          |
| [exascaleDbStorageVaultsUpdateSample.js][exascaledbstoragevaultsupdatesample]                                                   | update a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Update_MaximumSet_Gen.json                                                                               |
| [flexComponentsGetSample.js][flexcomponentsgetsample]                                                                           | get a FlexComponent x-ms-original-file: 2025-11-01-preview/FlexComponents_Get_MaximumSet_Gen.json                                                                                                       |
| [flexComponentsListByParentSample.js][flexcomponentslistbyparentsample]                                                         | list FlexComponent resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/FlexComponents_ListByParent_MaximumSet_Gen.json                                                     |
| [giMinorVersionsGetSample.js][giminorversionsgetsample]                                                                         | get a GiMinorVersion x-ms-original-file: 2025-11-01-preview/GiMinorVersions_Get_MaximumSet_Gen.json                                                                                                     |
| [giMinorVersionsListByParentSample.js][giminorversionslistbyparentsample]                                                       | list GiMinorVersion resources by GiVersion x-ms-original-file: 2025-11-01-preview/GiMinorVersions_ListByParent_MaximumSet_Gen.json                                                                      |
| [giVersionsGetSample.js][giversionsgetsample]                                                                                   | get a GiVersion x-ms-original-file: 2025-11-01-preview/GiVersions_Get_MaximumSet_Gen.json                                                                                                               |
| [giVersionsListByLocationSample.js][giversionslistbylocationsample]                                                             | list GiVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/GiVersions_ListByLocation_MaximumSet_Gen.json                                                           |
| [networkAnchorsCreateOrUpdateSample.js][networkanchorscreateorupdatesample]                                                     | create a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_CreateOrUpdate_MaximumSet_Gen.json                                                                                         |
| [networkAnchorsDeleteSample.js][networkanchorsdeletesample]                                                                     | delete a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_Delete_MaximumSet_Gen.json                                                                                                 |
| [networkAnchorsGetSample.js][networkanchorsgetsample]                                                                           | get a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_Get_MaximumSet_Gen.json                                                                                                       |
| [networkAnchorsListByResourceGroupSample.js][networkanchorslistbyresourcegroupsample]                                           | list NetworkAnchor resources by resource group x-ms-original-file: 2025-11-01-preview/NetworkAnchors_ListByResourceGroup_MaximumSet_Gen.json                                                            |
| [networkAnchorsListBySubscriptionSample.js][networkanchorslistbysubscriptionsample]                                             | list NetworkAnchor resources by subscription ID x-ms-original-file: 2025-11-01-preview/NetworkAnchors_ListBySubscription_MaximumSet_Gen.json                                                            |
| [networkAnchorsUpdateSample.js][networkanchorsupdatesample]                                                                     | update a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_Update_MaximumSet_Gen.json                                                                                                 |
| [operationsListSample.js][operationslistsample]                                                                                 | list the operations for the provider x-ms-original-file: 2025-11-01-preview/Operations_List_MaximumSet_Gen.json                                                                                         |
| [oracleSubscriptionsAddAzureSubscriptionsSample.js][oraclesubscriptionsaddazuresubscriptionssample]                             | add Azure Subscriptions x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_AddAzureSubscriptions_MaximumSet_Gen.json                                                                            |
| [oracleSubscriptionsCreateOrUpdateSample.js][oraclesubscriptionscreateorupdatesample]                                           | create a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_CreateOrUpdate_MaximumSet_Gen.json                                                                               |
| [oracleSubscriptionsDeleteSample.js][oraclesubscriptionsdeletesample]                                                           | delete a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_Delete_MaximumSet_Gen.json                                                                                       |
| [oracleSubscriptionsGetSample.js][oraclesubscriptionsgetsample]                                                                 | get a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_Get_MaximumSet_Gen.json                                                                                             |
| [oracleSubscriptionsListActivationLinksSample.js][oraclesubscriptionslistactivationlinkssample]                                 | list Activation Links x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListActivationLinks_MaximumSet_Gen.json                                                                                |
| [oracleSubscriptionsListBySubscriptionSample.js][oraclesubscriptionslistbysubscriptionsample]                                   | list OracleSubscription resources by subscription ID x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListBySubscription_MaximumSet_Gen.json                                                  |
| [oracleSubscriptionsListCloudAccountDetailsSample.js][oraclesubscriptionslistcloudaccountdetailssample]                         | list Cloud Account Details x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListCloudAccountDetails_MaximumSet_Gen.json                                                                       |
| [oracleSubscriptionsListSaasSubscriptionDetailsSample.js][oraclesubscriptionslistsaassubscriptiondetailssample]                 | list Saas Subscription Details x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListSaasSubscriptionDetails_MaximumSet_Gen.json                                                               |
| [oracleSubscriptionsUpdateSample.js][oraclesubscriptionsupdatesample]                                                           | update a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_Update_MaximumSet_Gen.json                                                                                       |
| [resourceAnchorsCreateOrUpdateSample.js][resourceanchorscreateorupdatesample]                                                   | create a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_CreateOrUpdate_MaximumSet_Gen.json                                                                                       |
| [resourceAnchorsDeleteSample.js][resourceanchorsdeletesample]                                                                   | delete a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_Delete_MaximumSet_Gen.json                                                                                               |
| [resourceAnchorsGetSample.js][resourceanchorsgetsample]                                                                         | get a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_Get_MaximumSet_Gen.json                                                                                                     |
| [resourceAnchorsListByResourceGroupSample.js][resourceanchorslistbyresourcegroupsample]                                         | list ResourceAnchor resources by resource group x-ms-original-file: 2025-11-01-preview/ResourceAnchors_ListByResourceGroup_MaximumSet_Gen.json                                                          |
| [resourceAnchorsListBySubscriptionSample.js][resourceanchorslistbysubscriptionsample]                                           | list ResourceAnchor resources by subscription ID x-ms-original-file: 2025-11-01-preview/ResourceAnchors_ListBySubscription_MaximumSet_Gen.json                                                          |
| [resourceAnchorsUpdateSample.js][resourceanchorsupdatesample]                                                                   | update a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_Update_MaximumSet_Gen.json                                                                                               |
| [systemVersionsGetSample.js][systemversionsgetsample]                                                                           | get a SystemVersion x-ms-original-file: 2025-11-01-preview/SystemVersions_Get_MaximumSet_Gen.json                                                                                                       |
| [systemVersionsListByLocationSample.js][systemversionslistbylocationsample]                                                     | list SystemVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/SystemVersions_ListByLocation_MaximumSet_Gen.json                                                   |
| [virtualNetworkAddressesCreateOrUpdateSample.js][virtualnetworkaddressescreateorupdatesample]                                   | create a VirtualNetworkAddress x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_CreateOrUpdate_MaximumSet_Gen.json                                                                        |
| [virtualNetworkAddressesDeleteSample.js][virtualnetworkaddressesdeletesample]                                                   | delete a VirtualNetworkAddress x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_Delete_MaximumSet_Gen.json                                                                                |
| [virtualNetworkAddressesGetSample.js][virtualnetworkaddressesgetsample]                                                         | get a VirtualNetworkAddress x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_Get_MaximumSet_Gen.json                                                                                      |
| [virtualNetworkAddressesListByParentSample.js][virtualnetworkaddresseslistbyparentsample]                                       | list VirtualNetworkAddress resources by CloudVmCluster x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_ListByParent_MaximumSet_Gen.json                                                  |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node autonomousDatabaseBackupsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node autonomousDatabaseBackupsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[autonomousdatabasebackupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseBackupsCreateOrUpdateSample.js
[autonomousdatabasebackupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseBackupsDeleteSample.js
[autonomousdatabasebackupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseBackupsGetSample.js
[autonomousdatabasebackupslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseBackupsListByParentSample.js
[autonomousdatabasebackupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseBackupsUpdateSample.js
[autonomousdatabasecharactersetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseCharacterSetsGetSample.js
[autonomousdatabasecharactersetslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseCharacterSetsListByLocationSample.js
[autonomousdatabasenationalcharactersetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseNationalCharacterSetsGetSample.js
[autonomousdatabasenationalcharactersetslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseNationalCharacterSetsListByLocationSample.js
[autonomousdatabaseversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseVersionsGetSample.js
[autonomousdatabaseversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabaseVersionsListByLocationSample.js
[autonomousdatabasesactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesActionSample.js
[autonomousdatabaseschangedisasterrecoveryconfigurationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesChangeDisasterRecoveryConfigurationSample.js
[autonomousdatabasescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesCreateOrUpdateSample.js
[autonomousdatabasesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesDeleteSample.js
[autonomousdatabasesfailoversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesFailoverSample.js
[autonomousdatabasesgeneratewalletsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesGenerateWalletSample.js
[autonomousdatabasesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesGetSample.js
[autonomousdatabaseslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesListByResourceGroupSample.js
[autonomousdatabaseslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesListBySubscriptionSample.js
[autonomousdatabasesrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesRestoreSample.js
[autonomousdatabasesshrinksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesShrinkSample.js
[autonomousdatabasesswitchoversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesSwitchoverSample.js
[autonomousdatabasesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/autonomousDatabasesUpdateSample.js
[cloudexadatainfrastructuresaddstoragecapacitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresAddStorageCapacitySample.js
[cloudexadatainfrastructuresconfigureexascalesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresConfigureExascaleSample.js
[cloudexadatainfrastructurescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresCreateOrUpdateSample.js
[cloudexadatainfrastructuresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresDeleteSample.js
[cloudexadatainfrastructuresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresGetSample.js
[cloudexadatainfrastructureslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresListByResourceGroupSample.js
[cloudexadatainfrastructureslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresListBySubscriptionSample.js
[cloudexadatainfrastructuresupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudExadataInfrastructuresUpdateSample.js
[cloudvmclustersaddvmssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersAddVmsSample.js
[cloudvmclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersCreateOrUpdateSample.js
[cloudvmclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersDeleteSample.js
[cloudvmclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersGetSample.js
[cloudvmclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersListByResourceGroupSample.js
[cloudvmclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersListBySubscriptionSample.js
[cloudvmclusterslistprivateipaddressessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersListPrivateIpAddressesSample.js
[cloudvmclustersremovevmssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersRemoveVmsSample.js
[cloudvmclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/cloudVmClustersUpdateSample.js
[dbnodesactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbNodesActionSample.js
[dbnodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbNodesGetSample.js
[dbnodeslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbNodesListByParentSample.js
[dbserversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbServersGetSample.js
[dbserverslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbServersListByParentSample.js
[dbsystemshapesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemShapesGetSample.js
[dbsystemshapeslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemShapesListByLocationSample.js
[dbsystemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemsCreateOrUpdateSample.js
[dbsystemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemsDeleteSample.js
[dbsystemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemsGetSample.js
[dbsystemslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemsListByResourceGroupSample.js
[dbsystemslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemsListBySubscriptionSample.js
[dbsystemsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbSystemsUpdateSample.js
[dbversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbVersionsGetSample.js
[dbversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dbVersionsListByLocationSample.js
[dnsprivateviewsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dnsPrivateViewsGetSample.js
[dnsprivateviewslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dnsPrivateViewsListByLocationSample.js
[dnsprivatezonesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dnsPrivateZonesGetSample.js
[dnsprivatezoneslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/dnsPrivateZonesListByLocationSample.js
[exadbvmclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersCreateOrUpdateSample.js
[exadbvmclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersDeleteSample.js
[exadbvmclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersGetSample.js
[exadbvmclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersListByResourceGroupSample.js
[exadbvmclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersListBySubscriptionSample.js
[exadbvmclustersremovevmssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersRemoveVmsSample.js
[exadbvmclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exadbVmClustersUpdateSample.js
[exascaledbnodesactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbNodesActionSample.js
[exascaledbnodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbNodesGetSample.js
[exascaledbnodeslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbNodesListByParentSample.js
[exascaledbstoragevaultscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbStorageVaultsCreateSample.js
[exascaledbstoragevaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbStorageVaultsDeleteSample.js
[exascaledbstoragevaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbStorageVaultsGetSample.js
[exascaledbstoragevaultslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbStorageVaultsListByResourceGroupSample.js
[exascaledbstoragevaultslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbStorageVaultsListBySubscriptionSample.js
[exascaledbstoragevaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/exascaleDbStorageVaultsUpdateSample.js
[flexcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/flexComponentsGetSample.js
[flexcomponentslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/flexComponentsListByParentSample.js
[giminorversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/giMinorVersionsGetSample.js
[giminorversionslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/giMinorVersionsListByParentSample.js
[giversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/giVersionsGetSample.js
[giversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/giVersionsListByLocationSample.js
[networkanchorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/networkAnchorsCreateOrUpdateSample.js
[networkanchorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/networkAnchorsDeleteSample.js
[networkanchorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/networkAnchorsGetSample.js
[networkanchorslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/networkAnchorsListByResourceGroupSample.js
[networkanchorslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/networkAnchorsListBySubscriptionSample.js
[networkanchorsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/networkAnchorsUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/operationsListSample.js
[oraclesubscriptionsaddazuresubscriptionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsAddAzureSubscriptionsSample.js
[oraclesubscriptionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsCreateOrUpdateSample.js
[oraclesubscriptionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsDeleteSample.js
[oraclesubscriptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsGetSample.js
[oraclesubscriptionslistactivationlinkssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsListActivationLinksSample.js
[oraclesubscriptionslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsListBySubscriptionSample.js
[oraclesubscriptionslistcloudaccountdetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsListCloudAccountDetailsSample.js
[oraclesubscriptionslistsaassubscriptiondetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsListSaasSubscriptionDetailsSample.js
[oraclesubscriptionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/oracleSubscriptionsUpdateSample.js
[resourceanchorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/resourceAnchorsCreateOrUpdateSample.js
[resourceanchorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/resourceAnchorsDeleteSample.js
[resourceanchorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/resourceAnchorsGetSample.js
[resourceanchorslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/resourceAnchorsListByResourceGroupSample.js
[resourceanchorslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/resourceAnchorsListBySubscriptionSample.js
[resourceanchorsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/resourceAnchorsUpdateSample.js
[systemversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/systemVersionsGetSample.js
[systemversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/systemVersionsListByLocationSample.js
[virtualnetworkaddressescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/virtualNetworkAddressesCreateOrUpdateSample.js
[virtualnetworkaddressesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/virtualNetworkAddressesDeleteSample.js
[virtualnetworkaddressesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/virtualNetworkAddressesGetSample.js
[virtualnetworkaddresseslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/javascript/virtualNetworkAddressesListByParentSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-oracledatabase
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/oracledatabase/arm-oracledatabase/README.md
